# greedy-holographic-reconstruction

./: README.md  build.sh  lapack_3.9.0_install.sh  openblas_install.sh
ghr/: .gitignore  Cargo.toml  build.rs
ghr-capi/: Cargo.toml  build.rs
ghr-capi/.cargo/: config
ghr-capi/src/: axis_utils.rs  buffer.rs  buffer_type.rs  builder.rs  calculator.rs  lib.rs  optimizer.rs
ghr/.cargo/: config
ghr/examples/: main.rs  profile.rs  relative_error.rs  time.rs  time_for_foci.rs  time_for_trans.rs
ghr/src/: consts.rs  lib.rs  math_utils.rs  utils.rs  vec_utils.rs  wave_source.rs
ghr/src/buffer/: amplitude_field_buffer.rs  bounds.rs  builder.rs  complex_field_buffer_scatter.rs  dimension.rs  generator.rs  intensity_field_buffer.rs  mod.rs  traits.rs
ghr/src/buffer/scalar_filed_buffer/: mod.rs  scalar_filed_buffer_1d.rs  scalar_filed_buffer_2d.rs  scalar_filed_buffer_3d.rs  traits.rs
ghr/src/calculator/: cpu_calculator.rs  mod.rs  traits.rs
ghr/src/optimizer/: ghrbf.rs  gradient_descent.rs  greedy_full_search.rs  gs_pat.rs  horn.rs  levenberg_marquardt.rs  long.rs  mod.rs
py-ghr/: .gitignore  README.md  analysis.py  build.ps1  build.sh  main.py  plot.py  readme.md  stats.py
py-ghr/ghr/: __init__.py  ghr.py  nativemethods.py  plot_helper.py
win/: README.md  gfortran.lib
