[package]
name = "ghr"
version = "0.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
na = "0.21.1"
num-traits = "0.2.12"
itertools = "0.9.0"
rayon = "1.3.1"
num = "0.3.0"
rand = "0.7.3"

[dev-dependencies] 
image = "0.23"
