[package]
name = "ghr"
version = "0.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
rayon = "1.3.1"
rand = "0.7.3"
ndarray = "0.13.1"
openblas-src = {version = "0.9", features = ["static", "system"]}
ndarray-linalg = {version = "0.12.1", features = ["openblas"]}
num-traits = "0.2.12"

[dev-dependencies] 
image = "0.23"
