[package]
name = "ghr"
version = "0.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rayon = "1.5.0"
rand = "0.8.2"
openblas-src = { version = "0.9.0", features = ["system"]}
ndarray = { version = "0.13.0", features = ["blas"]}
ndarray-linalg = {version = "0.12.1", features = ["openblas"]}
num-traits = "0.2.12"
once_cell = {version = "1.5.2", optional = true}

[dev-dependencies] 
image = "0.23"
csv = "1.1"
num-integer = "0.1.44"

[features]
cache = ["once_cell"]
double = []
default = ["double", "cache"]

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
debug = true
lto = true

[profile.test]
opt-level = 3
